--- a/Project_Prog4/nbproject/project.properties
+++ b/Project_Prog4/nbproject/project.properties
@@ -33,8 +33,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${libs.eclipselink.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=project_prog4.Project_Prog4
+main.class=project_prog4.MainFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
